# lingmo-calendar

./: CONTRIBUTING.md  HACKING.md  THANKS.md  lingmo-calendar.doap  meson.build
build-aux/flatpak/: org.gnome.Calendar.json
data/: meson.build  org.lingmo.Calendar.desktop.in.in  org.lingmo.Calendar.search-provider.ini.in  org.lingmo.Calendar.service.in  org.lingmo.calendar.gschema.xml.in
data/appdata/: meson.build  org.lingmo.Calendar.appdata.xml.in.in
debian/: changelog  control  control.in  copyright  rules
debian/upstream/: metadata
po/: POTFILES.in  ab.po  af.po  an.po  ar.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  (+29 more)
src/: main.c  meson.build
src/attic/: gcal-month-view.c
src/core/: gcal-context.c  gcal-event.c  gcal-manager.c  gcal-manager.h  gcal-recurrence.c  gcal-recurrence.h
src/gui/: gcal-application.c  gcal-application.h  gcal-calendar-button.c  gcal-event-popover.c  gcal-event-widget.c  gcal-event-widget.h  gcal-meeting-row.c  gcal-overflow-bin-layout.c  gcal-overflow-bin-layout.h  gcal-overflow-bin.c  gcal-overflow-bin.h  gcal-quick-add-popover.c  gcal-search-button.c  gcal-sync-indicator.c  gcal-toolbar-end.c  gcal-toolbar-end.h  gcal-weather-settings.c  gcal-window.c  gcal-window.h  gui.gresource.xml  meson.build
src/gui/calendar-management/: calendar-management.gresource.xml  gcal-calendar-management-dialog.c  gcal-calendars-page.c  gcal-edit-calendar-page.c  gcal-new-calendar-page.c  meson.build
src/gui/event-editor/: event-editor.gresource.xml  gcal-alarm-row.c  gcal-date-chooser-day.c  gcal-date-chooser.c  gcal-date-selector.c  gcal-date-selector.h  gcal-event-editor-dialog.c  gcal-event-editor-dialog.h  gcal-multi-choice.c  gcal-notes-section.c  gcal-reminders-section.c  gcal-schedule-section.c  gcal-summary-section.c  gcal-time-selector.c  gcal-time-selector.h  meson.build
src/gui/gtk/: gtk.gresource.xml  meson.build
src/gui/icons/: icons.gresource.xml  meson.build
src/gui/importer/: gcal-import-dialog.c  gcal-import-file-row.c  importer.gresource.xml  meson.build
src/gui/views/: gcal-agenda-view.c  gcal-month-cell.c  gcal-month-popover.c  gcal-month-view.c  gcal-week-header.c  gcal-week-view.c  meson.build  views.gresource.xml
src/theme/: meson.build  theme.gresource.xml
src/utils/: gcal-utils.c  gcal-utils.h
src/weather/: gcal-weather-service.c
tests/: test-discoverer.c  test-event.c  test-range-tree.c  test-server.c
